endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[[release-notes-4.7.0]]
==== 4.7.0

[float]
===== Fixed
- Handle Faraday response being nil {pull}1382[#1382]
- Fix error with invalid %-encoding {pull}1400[#1400]

[float]
===== Added
- Add keyword args for span_method helper {pull}1395[#1395]

[[release-notes-4.6.2]]
==== 4.6.2

[float]
===== Fixed
- Fix Faraday::RackBuilder::StackLocked {pull}1371[#1371]

[[release-notes-4.6.1]]
==== 4.6.1

[float]
===== Fixed

- Fix growing number of open file descriptors when HTTP request to APM is never sent {pull}1351[#1351]
- Fix setting span http status code when Faraday Middleware is used {pull}1368[#1368]
- Handle whitespace when splitting tracestate entries {pull}1353[#1353]

[[release-notes-4.6.0]]
==== 4.6.0

[float]
===== Added

- Added transaction_name to reported error to allow grouping by transaction name {pull}1267[#1267]
- Added ability to query server for version (useful in the future) {pull}1278[#1278]
- Added instrumentation for https://github.com/zendesk/racecar/ Racecar Kafka library {pull}1284[#1284]

===== Changed

- Expanded filtering to sanitize any key that contains the string 'auth' {pull}1266[#1266]
- Rename `log_ecs_formatting` option to `log_ecs_reformatting`, deprecate old option name {pull}1248[#1248]
- When the configuration value for `log_path` is set, override the `logger` to point to that path instead of using e.g. Rails logger {pull}1247[#1247]
- Only send tracestate header for distributed tracing when it has content {pull}1277[#1277]